feat: add visual feedback in menubar for keyboard shortcuts

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,12 @@ canvas {
   background-color: #ededed;
 }
 
+/* Used for toggling a flash */
+.menu-label.hover {
+  color: black;
+  background-color: #ededed;
+}
+
 /* Dropdown container */
 .dropdown {
   position: absolute;
