--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,10 +156,11 @@ canvas {
   position: fixed;
   top: 64px;
   right: 16px;
-  height: calc(100vh - 80px); /* Always under the menubar */
+  height: calc(100vh - 80px);
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: repeat(16, 1fr); /* 16 swatches max vertically */
+  grid-template-rows: repeat(16, 1fr);
+  grid-auto-columns: minmax(40px, auto); /* Define column width */
   background-color: rgba(0, 0, 0, 0.5);
   padding: 8px;
   box-sizing: border-box;
